<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activeworkout.ActiveWorkoutFragment">

    <TextView
        android:id="@+id/activeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/activeCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="#A5A5A5"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activeTitle"/>

    <EditText
        android:id="@+id/activeTime"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/time"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:padding="10dp"
        android:background="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activeCategory"
        android:inputType="number"
        android:autofillHints="sets" />

    <EditText
        android:id="@+id/activeSets"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/sets"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:padding="10dp"
        android:background="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activeTime"
        android:inputType="number"
        android:autofillHints="sets" />

    <EditText
        android:id="@+id/activeWeight"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/weight"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:padding="10dp"
        android:background="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activeSets"
        android:inputType="number"
        android:autofillHints="weight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_button"
        android:text="@string/finish_workout"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/activeSets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>