<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addworkout.AddWorkoutFragment">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:maxLength="18"
        android:hint="@string/workout_title"
        android:autofillHints="workoutTitle"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/editCategory"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:hint="@string/category_hint"
        android:autofillHints="category"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:maxLength="10"
        android:background="#4A4A4A"
        app:layout_constraintTop_toBottomOf="@id/editTitle"
        app:layout_constraintStart_toStartOf="@id/editDescription"
        app:layout_constraintEnd_toStartOf="@id/workoutCheckbox"
        android:inputType="text"/>

    <CheckBox
        android:id="@+id/workoutCheckbox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/completed"
        android:textSize="20sp"
        android:background="#4A4A4A"
        app:layout_constraintTop_toBottomOf="@id/editTitle"
        app:layout_constraintStart_toEndOf="@id/editCategory"
        app:layout_constraintEnd_toEndOf="@id/editDescription"/>

    <EditText
        android:id="@+id/editTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:hint="Waktu (min) ..."
        android:autofillHints="category"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:maxLength="3"
        android:background="#4A4A4A"
        app:layout_constraintTop_toBottomOf="@id/editCategory"
        app:layout_constraintStart_toStartOf="@id/editDescription"
        app:layout_constraintEnd_toStartOf="@id/editWeight"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:hint="Berat (kg) ..."
        android:autofillHints="category"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:maxLength="10"
        android:background="#4A4A4A"
        app:layout_constraintTop_toBottomOf="@id/workoutCheckbox"
        app:layout_constraintStart_toEndOf="@id/editTime"
        app:layout_constraintEnd_toEndOf="@id/editDescription"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="44dp"
        android:autofillHints="workoutDescription"
        android:background="#4A4A4A"
        android:gravity="top"
        android:hint="@string/descriptionHint"
        android:inputType="text"
        android:maxLines="8"
        android:padding="10dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/editTime"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/editTextDate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/due_date"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/save"
        android:src="@drawable/baseline_save_as_24"
        android:backgroundTint="#AFAFAF"
        app:layout_constraintEnd_toStartOf="@id/button_delete"
        app:layout_constraintBottom_toBottomOf="@id/button_delete"
        app:maxImageSize="40dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF5050"
        android:clickable="true"
        android:contentDescription="@string/delete"
        android:src="@drawable/baseline_delete_forever_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>