<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <View
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:background="@drawable/bulletpoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvName"
        app:layout_constraintTop_toTopOf="@id/tvName"
        app:layout_constraintBottom_toBottomOf="@id/tvName"/>


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/workout_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#D9D9D9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/placeholderTime"
        android:textSize="15sp"
        android:textColor="#D9D9D9"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/tvName"
        app:layout_constraintBottom_toBottomOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/category"
        android:textSize="18sp"
        android:textColor="#D9D9D9"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/descriptionExample"
        android:textSize="20sp"
        android:textColor="#D9D9D9"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        app:layout_constraintStart_toStartOf="@id/tvCategory"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="@id/tvDescription"
        />

</androidx.constraintlayout.widget.ConstraintLayout>